Add: LinCheck and a test for multithreading